--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,6 @@
         "php": ">=7.0-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5",
-        "symfony/config": "2.7.*"
+        "phpunit/phpunit": "^5"
     }
 }
